Closed Bug 1869091 Opened 1 year ago Closed 1 year ago

Perma Linux64 opt SM [tier 2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_ObjectKeysResult'

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox120 --- unaffected
firefox121 --- unaffected
firefox122 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: nbp)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: nfay [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=439458103&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Bk7SnjFbTiWMu9jon7f8dw/runs/0/artifacts/public/logs/live_backing.log


[task 2023-12-09T00:45:09.794Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2023-12-09T00:45:09.794Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2023-12-09T00:45:09.798Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2023-12-09T00:45:09.798Z] config/external/icu/i18n/datefmt.o
[task 2023-12-09T00:45:09.798Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2023-12-09T00:45:10.311Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/js/src'
[task 2023-12-09T00:45:10.311Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o PortableBaselineInterpret.o -c  -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-spider/js/src -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -Werror=format -fstandalone-debug -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/PortableBaselineInterpret.o.pp   /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp
[task 2023-12-09T00:45:10.311Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_ObjectKeysResult'
[task 2023-12-09T00:45:10.311Z]   427 |       CACHE_IR_OPS(OP)
[task 2023-12-09T00:45:10.311Z]       |                    ^
[task 2023-12-09T00:45:10.311Z] 1 error generated.
[task 2023-12-09T00:45:10.311Z] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: PortableBaselineInterpret.o] Error 1
[task 2023-12-09T00:45:10.311Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src'
[task 2023-12-09T00:45:10.318Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/js/src'
[task 2023-12-09T00:45:10.318Z] js/src/ProfilingStack.o
[task 2023-12-09T00:45:10.318Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src'

:nbp, since you are the author of the regressor, bug 1845728, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(nicolas.b.pierron)

Set release status flags based on info from the regressing bug 1845728

Summary: Perma SM [tier 2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_ObjectKeysResult' → Perma Linux64 opt SM [tier 2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_ObjectKeysResult'

Based on the error message, I think this just needs a CACHEOP_CASE_UNIMPL(ObjectKeysResult) added along with all the other unimplemented ops in js/src/vm/PortableBaselineInterpret.cpp.

Assignee: nobody → nicolas.b.pierron
Status: NEW → ASSIGNED
Blocks: sm-meta
Flags: needinfo?(nicolas.b.pierron)
Pushed by npierron@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b7336e3f433e Add unimplemented case for ObjectKeysResult. r=jandem
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
See Also: → 1873938
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: