Bug 1869091 - Add unimplemented case for ObjectKeysResult. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D196085